# gamlatidtabeller

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: docker.yml
app/: admin.py  config.py  database.py  gtfs_import.py  main.py  printing.py  run.py  settings_store.py  timetable.py
app/routes/: api.py  pages.py  studio.py
app/services/: realtime.py  trafiklab.py
app/static/: admin_karta.js  index.js  stop.js  studio.js  style.css  utils.js
app/templates/: base.html  error.html  index.html  line.html  stop.html  studio.html
app/templates/admin/: base.html  dashboard.html  karta.html  login.html  tur.html
app/templates/print/: _lapp_body.html  _lapp_css.html  lapp.html
