[project]
name = "gamlatidtabeller"
version = "0.1.0"
description = "Hallplatsvan for Harnosand - busstider och utskrivbara stolptidtabeller fran Trafiklabs oppna data"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "gtfs-realtime-bindings>=1.0",
]

[tool.uv]
package = false
